// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entitiesMetaData creates all metaData info 1`] = `
Object {
  "branding": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "branding",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Branding",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "chatWidgets": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "chatWidgets",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Chat Widgets",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "customMetrics": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "customMetrics",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Statistics Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "emailTemplates": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "emailTemplates",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Email_Templates/Updating_Email_Templates.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Email Templates",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "flows": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "flows",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Flows",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "groups": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "groups",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Groups",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "listTypes": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "listTypes",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "List Types",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "lists": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "listTypes",
    ],
    "dependentEntity": "",
    "entityName": "lists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Lists/Lists.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Lists",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "listItems",
    "updateFormDependencies": Array [],
  },
  "outboundIdentifierLists": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "outboundIdentifiers",
    "entityName": "outboundIdentifierLists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Value",
        "name": "value",
      },
      Object {
        "label": "Channel Type",
        "name": "channelType",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Outbound Identifier Lists",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [
      "outboundIdentifiers",
    ],
  },
  "outboundIdentifiers": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "flows",
    ],
    "dependentEntity": "",
    "entityName": "outboundIdentifiers",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Outbound Identifiers",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [
      "flows",
    ],
  },
  "permissions": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "permissions",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Permissions",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "protectedBranding": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "protectedBranding",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Protected Branding",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
  "roles": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "roles",
    "entityName": "roles",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Roles",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [
      "permissions",
    ],
  },
  "skills": EntityMetaData {
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "skills",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Skills",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "updateFormDependencies": Array [],
  },
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 1`] = `
Object {
  "command": "getMockEntity",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 2`] = `
Object {
  "command": "createMockEntity",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 3`] = `
Object {
  "command": "updateMockEntity",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 1`] = `
Object {
  "command": "getMockEntit",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 2`] = `
Object {
  "command": "createMockEntit",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 3`] = `
Object {
  "command": "updateMockEntit",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 1`] = `
Object {
  "command": "get",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get--response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 2`] = `
Object {
  "command": "create",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create--response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 3`] = `
Object {
  "command": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update--response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in any other apiMethod 1`] = `
Object {
  "command": "getListMember",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get--list-member-response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in any other apiMethod 2`] = `
Object {
  "command": "createListMember",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create--list-member-response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in update as apiMethod 1`] = `
Object {
  "command": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update--response",
}
`;
